--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,1 +1,6 @@
-
+$background--secondary: #f5f5f5;
+$color--gray:           #d2d2d2;
+$color--gray--darker:   #8c8c8c;
+$color--blue:           #0178be;
+$color--orange:         #f26522;
+$color--green:          #66952e;
