--- a/src/scss/second_slide.scss
+++ b/src/scss/second_slide.scss
@@ -28,4 +28,14 @@
     }
   }
 
+  //PHONE
+  &-phone {
+    padding-top: 96px;
+    img {
+      height: 456px;
+      margin-left: 24px;
+      width: auto;
+    }
+  }
+
 }
