--- a/src/scss/_bootstrap-custom.scss
+++ b/src/scss/_bootstrap-custom.scss
@@ -1,7 +1,7 @@
 $body-bg: #fff;
 $text-color: #333132;
 $link-color: #0178be;
-$link-hover-color: lighten($link-color, 10%);
+$link-hover-color: #0C65B1;
 $font-family-base: 'glober', sans-serif;
 $font-size-base: 14px;
 $font-size-large: 18px;
