--- a/src/scss/event_section.scss
+++ b/src/scss/event_section.scss
@@ -9,3 +9,21 @@
     color: #262626;
   }
 }
+
+.event_section {
+  h3 {
+    margin-top: 52px;
+    margin-bottom: 24px;
+  }
+}
+
+.event-button {
+  margin-top: 60px;
+}
+
+.wodback {
+  background-image: url(../src/image/wod.png);
+  height: 408px;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
