--- a/src/scss/event_section.scss
+++ b/src/scss/event_section.scss
@@ -1,29 +1,55 @@
 @import "variables";
+@import "bootstrap-custom";
 
 .event_section {
-  padding-top: 32px;
-  padding-bottom: 32px;
+  min-height: 480px;
 
   &-text {
-    line-height: 21px;
-    color: #262626;
+    line-height: 1.5;
+    max-width: 400px;
   }
-}
 
-.event_section {
   h3 {
-    margin-top: 52px;
+    line-height: 37px;
+    margin-top: 98px;
     margin-bottom: 24px;
+  }
+
+  &-image {
+    height: 400px;
+    margin-top: 38px;
+    width: 100%;
+    background: url(../src/image/speech.jpg) no-repeat center;
+    background-size: cover;
   }
 }
 
 .event-button {
-  margin-top: 60px;
+  margin-top: 88px;
 }
 
-.wodback {
-  background-image: url(../src/image/wod.png);
-  height: 408px;
-  background-repeat: no-repeat;
-  background-size: cover;
+@media (max-width: $screen-xs-max) {
+
+  .event_section {
+    h3 {
+      margin-top: 0;
+    }
+
+    &-left {
+      padding: 24px !important;
+    }
+
+    &-right {
+      padding: 0 !important;
+    }
+
+    &-image {
+      height: 208px;
+      margin-top: 0;
+    }
+  }
+
+  .event-button {
+    margin-top: 24px;
+  }
 }
