--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,11 +1,18 @@
 @import "bootstrap-custom";
 @import "variables";
 
+* {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+
 .logo {
-  height: 50px;
+  height: 48px;
 }
 
 .fontbold {
+  font-family: glober-bold;
   font-weight: bold;
 }
 
@@ -35,7 +42,7 @@
 }
 
 .custom-droptoggle {
-  color: #777 !important;
+  color: rgba(0,0,0,87);
 }
 
 .custom-b {
@@ -114,6 +121,7 @@
   margin-top: 32px;
   padding-top: 57px;
   box-shadow: -1px 4px 4px 0 rgba(0, 0, 0, 0.2);
+  right: 8px;
 }
 
 .oidcen {
@@ -160,7 +168,7 @@
   box-shadow: -1px 4px 4px 0 rgba(0, 0, 0, 0.2);
   border-radius: 24px;
   left: auto;
-  right: 0;
+  right: 8px;
   margin-top: 8px;
 }
 
@@ -185,7 +193,6 @@
   display: flex;
   overflow: hidden;
   border-radius: 5px;
-  margin-right: -$grid-gutter-width/2;
   max-height: 240px;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
   margin-bottom: 16px;
@@ -201,21 +208,29 @@
   width: 100%;
 }
 
+.slide-button-sportsmens {
+  position: relative;
+  width: 100%;
+  bottom: 0;
+  margin-top: -64px;
+}
+
 .star_title {
   margin-right: 162px;
-  margin-left: 23px;
-  margin-top: 21px;
+  margin-left: 24px;
+  margin-top: 24px;
 }
 
 .sportsmens_title {
-  margin-left: 23px;
-  margin-top: 21px;
+  margin-left: 24px;
+  margin-top: 24px;
 }
 
 .sportsmens_biography {
   margin-right: 24px;
-  margin-left: 23px;
+  margin-left: 24px;
   margin-bottom: 18px;
+  margin-top: 24px;
 }
 
 .mar-slide {
@@ -224,8 +239,19 @@
   width: 100%;
 }
 
+sportsmens-margin {
+  margin-top: 0;
+  margin-bottom: 20px;
+  width: 100%;
+}
+
 .spotsmens_photo {
-  max-width: 35%;
+  max-width: 176px;
+}
+
+.sportsmen_subheader {
+  color: rgba(0,0,0,45);
+  line-height: 27px;
 }
 
 .school2-margin {
@@ -237,7 +263,7 @@
 }
 
 .photo_size {
-  width: 100%;
+  height: 100%;
 }
 
 // NAVIGATION
@@ -267,7 +293,7 @@
   background: #F5F5F5;
   padding-top: 80px;
   padding-bottom: 16px;
-  box-shadow: 0 0 1px 0 rgba(0, 0, 0, 0.5);
+  border-top: solid 1px rgb(230,230,230);
 
 }
 
@@ -286,6 +312,8 @@
 .subscribe-text2 {
   margin-top: 39px !important;
   margin-bottom: 39px !important;
+  padding-top: 6px;
+  line-height: 58px;
 }
 
 .subscribe-button_pad {
@@ -302,7 +330,7 @@
 }
 
 .testimonials-title {
-  color: #0C65B1;
+  color: rgb(0,122,191);
   margin-top: 16px;
 }
 
@@ -398,16 +426,15 @@
 
 //buttons
 .button- {
-  border-radius: 5px;
+  border-radius: 4px;
   cursor: pointer;
   display: inline-block;
   font-size: 1.125em;
   font-family: $font-family-base;
-  height: 50px;
+  height: 48px;
   line-height: 52px;
   //padding: 13px 0 12px;
   text-align: center;
-  width: 190px;
   box-shadow: none;
 
   &-primary {
@@ -415,6 +442,7 @@
     background: $btn-primary-bg;
     color: $btn-primary-color;
     border: none;
+    width: 248px;
 
     &:hover {
       background: lighten($btn-primary-bg, 5%);
@@ -430,11 +458,13 @@
   &-default {
     @extend .button-;
     background: #fff;
-    border: solid 1px $color--gray;
     color: $color--blue;
+    width: 272px;
+    box-shadow: 0 2px 8px 0 rgba(0,0,0,0.2);
     &:hover {
       background: #f5f5f5;
       text-decoration: none;
+      box-shadow: 0 8px 8px 0 rgba(0,0,0,0.2);
     }
   }
 }
