--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -41,6 +41,10 @@
   }
 }
 
+.host-event-color {
+  color: rgb(0,122,191)!important;
+}
+
 .custom-droptoggle {
   color: rgba(0,0,0,87);
 }
@@ -219,7 +223,6 @@ sportsmens-margin {
 .star_team_section {
   background: #F5F5F5;
   width: 100% !important;
-  margin-top: 34px;
   padding-top: 16px;
   box-shadow: 0 0 1px 0 rgba(0, 0, 0, 0.5);
 }
@@ -318,10 +321,20 @@ sportsmens-margin {
   background-position: center;
 }
 
-.software_section {
+.slide-button-testimonials {
   position: relative;
-  height: 408px;
+  width: 100%;
+  bottom: 0;
+  margin-top: 6.5px;
+}
+
+.software_section {
+  overflow: hidden;
+  position: relative;
   margin-top: 80px;
+  &-height {
+    height: 408px;
+  }
 }
 
 .software-margin {
@@ -333,7 +346,7 @@ sportsmens-margin {
   margin-left: 50%;
   top: 0;
   img {
-    height: 470px;
+    height: 472px;
   }
 }
 
