verstka po zamechaniyam

--- a/src/scss/second_slide.scss
+++ b/src/scss/second_slide.scss
@@ -123,13 +123,13 @@
   background: $background--secondary;
   color: rgba(0, 0, 0, 0.45);
   margin-top: 33px;
-  width: auto;
+  width: auto!important;
   border-bottom-right-radius: 5px;
   border-bottom-left-radius: 5px;
-  padding-top: 23px;
-  padding-left: 24px;
-  padding-right: 24px;
-  padding-bottom: 24px;
+  padding-top: 23px!important;
+  padding-left: 24px!important;
+  padding-right: 24px!important;
+  padding-bottom: 24px!important;
   line-height: 24px;
 }
 
