--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -23,11 +23,12 @@
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 0px 0px rgba(0, 0, 0, 0.075) !important;
   font-size: 16px;
   margin: 0;
-  padding-top: 10px;
 
   li {
     a {
       color: $text-color;
+      min-height: 72px;
+      padding-top: 24.5px;
     }
 
     a:hover {
@@ -57,7 +58,12 @@
 .dropmenu-custom {
   right: 0;
   left: auto;
-  margin-right: 50px;
+  margin-right: -21px;
+  width: 260px;
+  border-radius: 0;
+  border: 0;
+  border-left: 1px solid #777;
+  background-color: #F5F5F5;
 }
 
 .cus-line {
@@ -173,6 +179,26 @@
   margin-top: 24px;
 }
 
+.sportsmen_modal-header {
+  background-color: #F5F5F5;
+  height: 72px;
+  color: #0C65B1;
+  line-height: 36px;
+  font-size: 25px;
+  padding-top: 21px;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  padding-left: 24px;
+}
+
+.sportsmens_modal-biography {
+  color: #333333;
+  margin-top: 18px;
+  margin-right: 24px;
+  margin-left: 24px;
+  margin-bottom: 18px;
+}
+
 .sportsmens_title {
   margin-left: 24px;
   margin-top: 24px;
@@ -281,7 +307,11 @@ sportsmens-margin {
 }
 
 .testimonial-bottom {
-  margin-bottom: 22px;
+  height: 80px;
+  h3 {
+    padding-top: 8px;
+    margin-bottom: 22px;
+  }
 }
 
 .testimonial-school {
@@ -305,6 +335,11 @@ sportsmens-margin {
   box-shadow: -1px 0 0 0 rgba(0,0,0,0.12);
   min-height: 240px;
   padding-left: 32px;
+}
+
+.testimonial-picture-padding {
+  padding-left: 0;
+  height: 240px;
 }
 
 .testimonial1-background {
@@ -400,6 +435,10 @@ sportsmens-margin {
 
 .contacts-margin {
   margin-top: 65px;
+}
+
+.copyright-margin {
+  margin-top: 27px;
 }
 
 //buttons
