--- a/src/scss/_bootstrap-custom.scss
+++ b/src/scss/_bootstrap-custom.scss
@@ -7,7 +7,7 @@ $font-size-base: 14px;
 $font-size-large: 18px;
 $line-height-base: 1.5625;
 $btn-primary-color: #fff;
-$btn-primary-bg: #0178be;
+$btn-primary-bg: #007ABF;
 $btn-primary-border: #164170;
 $font-size-h1: 40px;
 $font-size-h2: 36px;
