--- a/src/scss/button.scss
+++ b/src/scss/button.scss
@@ -5,11 +5,10 @@
   border-radius: 4px;
   cursor: pointer;
   display: inline-block;
-  font-size: 1.125em;
-  font-family: $font-family-base;
+  font-size: 18px;
+  font-family: Roboto, sans-serif;
   height: 48px;
   line-height: 52px;
-  //padding: 13px 0 12px;
   text-align: center;
   box-shadow: none;
 
@@ -21,7 +20,7 @@
     width: 248px;
 
     &:hover {
-      background: lighten($btn-primary-bg, 5%);
+      background: #0066AB;
       color: #fff;
       text-decoration: none;
     }
@@ -34,7 +33,8 @@
   &-default {
     @extend .button-;
     background: #fff;
-    color: $color--blue;
+    border: none;
+    color: #0C65B1;
     width: 272px;
     box-shadow: 0 2px 8px 0 rgba(0,0,0,0.2);
     &:hover {
