--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -34,4 +34,10 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'Roboto';
+  src: url('/dist/fonts/Roboto/Roboto-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
 
