--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -70,6 +70,7 @@
 }
 
 .close-popup {
+  margin-top: 2px!important;
   background: url("../src/icon/x.svg") no-repeat center!important;
   height: 24px;
   width: 24px;
@@ -399,6 +400,12 @@ sportsmens-margin {
     margin-top: 98px;
     float: right;
   }
+  a {
+    color: rgba(0,0,0,0.87)
+  }
+  a:hover {
+    color: #0C65B1;
+  }
 }
 
 .contacts-margin {
@@ -411,4 +418,8 @@ sportsmens-margin {
 
 .contact-divider-color {
   color: rgba(0,0,0,30);
+}
+
+.contact-decoration {
+  text-decoration: underline;
 }
