--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -121,99 +121,18 @@
   height: 300px;
 }
 
-.spotsmens_info {
-  display: flex;
-  overflow: hidden;
-  border-radius: 5px;
-  max-height: 240px;
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
-  margin-bottom: 16px;
-}
 
-.sportsmens_bio {
-  h3 {
-    font-size: 27px;
-  }
-  background: white;
-  height: 295px;
-  vertical-align: middle;
-  width: 100%;
-}
-
-.slide-button-sportsmens {
-  position: relative;
-  width: 100%;
-  bottom: 0;
-  margin-top: -64px;
-}
-.sportsmens-slide {
-  margin-top: 0;
-}
-
-.star_title {
-  margin-right: 162px;
-  margin-left: 24px;
-  margin-top: 24px;
-}
-
-.sportsmen_modal-header {
-  background-color: #F5F5F5;
-  height: 72px;
-  color: #0C65B1;
-  line-height: 36px;
-  font-size: 25px;
-  padding-top: 21px;
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
-  padding-left: 24px;
-}
-
-.sportsmens_modal-biography {
-  color: #333333;
-  margin-top: 18px;
-  margin-right: 24px;
-  margin-left: 24px;
-  margin-bottom: 18px;
-}
-
-.sportsmens_title {
-  margin-left: 24px;
-  margin-top: 24px;
-}
-
-.sportsmens_biography {
-  margin-right: 24px;
-  margin-left: 24px;
-  margin-bottom: 18px;
-  margin-top: 24px;
-}
-
-sportsmens-margin {
-  margin-top: 0;
-  margin-bottom: 20px;
-  width: 100%;
-}
-
-.spotsmens_photo {
-  max-width: 176px;
-}
-
-.sportsmen_subheader {
-  color: rgba(0,0,0,45);
-  line-height: 27px;
-}
 
 .school2-margin {
   margin-top: 18px;
 }
 
-.brandan_photo {
-  max-width: 265px;
-}
 
-.photo_size {
-  height: 100%;
-}
+.modal-open {
+    overflow-y: scroll!important;
+    padding-right: 0!important;
+  }
+
 
 // NAVIGATION
 .header-nav-fixed {
@@ -226,24 +145,9 @@ sportsmens-margin {
   z-index: 1;
 }
 
-.star_team_section {
-  background: #F5F5F5;
-  width: 100% !important;
-  padding-top: 16px;
-  box-shadow: 0 0 1px 0 rgba(0, 0, 0, 0.5);
-}
 
-.team_olympians {
-  margin-top: 7%;
-}
 
-.sportsmens_section {
-  background: #F5F5F5;
-  padding-top: 80px;
-  padding-bottom: 16px;
-  border-top: solid 1px rgb(230,230,230);
 
-}
 
 .subscribe_section {
   background: linear-gradient(135deg, #007ABF 0%, #003A6F 100%);
@@ -423,3 +327,4 @@ sportsmens-margin {
 .contact-decoration {
   text-decoration: underline;
 }
+
