--- a/src/scss/menu.scss
+++ b/src/scss/menu.scss
@@ -80,15 +80,21 @@
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 0px 0px rgba(0, 0, 0, 0.075) !important;
     font-size: 16px;
     margin: 0;
+  }
 
-    li {
+  .main-menu {
+    display: block;
+
+    &-item {
       a {
         color: $text-color;
         min-height: 70px;
         padding-top: 24.5px;
       }
 
+      a:focus,
       a:hover {
+        background: none;
         text-decoration: underline !important;
         color: $link-hover-color !important;
       }
@@ -104,6 +110,62 @@
         }
       }
 
+    }
+  }
+
+}
+
+@media (max-width: $screen-sm-min) {
+
+  .logo {
+    margin-left: 8px;
+  }
+
+  .menu_right {
+    position: relative;
+
+    // Sandwich button
+    .menu_button {
+      position: absolute;
+      right: 0;
+      top: -60px;
+      display: flex !important;
+      align-items: center;
+      justify-content: center;
+      height: 48px;
+      width: 48px;
+      margin: 12px;
+    }
+
+    .main-menu {
+      display: none;
+      position: fixed;
+      bottom: 8px;
+      border-radius: 4px;
+      left: 8px;
+      right: 8px;
+      width: 100%;
+
+      &-overlay  {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: #d2d;
+      }
+
+      &-item {
+
+        a {
+          border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+          color: #000000;
+          font-size: 18px;
+          height: 48px;
+          min-height: auto;
+          padding: 16px 16px 0;
+        }
+      }
     }
   }
 }
