--- a/src/scss/menu.scss
+++ b/src/scss/menu.scss
@@ -7,6 +7,7 @@
   box-shadow: -1px 0 0 0 rgba(0, 0, 0, 0.12);
   min-height: 48px;
   margin-left: 22px;
+  padding-top: 5px;
   position: relative;
 
   .caret_custom {
@@ -26,10 +27,6 @@
   align-items: center;
   display: flex;
 
-  margin: {
-    top: 12px;
-  }
-;
   min-height: 48px;
 
   .dropdown_list {
@@ -95,7 +92,7 @@
       a {
         color: $text-color;
         min-height: 70px;
-        padding-top: 30px;
+        padding-top: 27px;
       }
 
       a:focus,
@@ -129,6 +126,7 @@
 
   .logo {
     margin-left: 8px;
+    margin-top: 12px;
   }
 
   .menu_right {
