Added header content

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -4,3 +4,5 @@ $color--gray--darker:   #8c8c8c;
 $color--blue:           #0178be;
 $color--orange:         #f26522;
 $color--green:          #66952e;
+
+$line-height-main: 1.5;
