--- a/src/scss/platform_slider.scss
+++ b/src/scss/platform_slider.scss
@@ -7,12 +7,14 @@
   display: flex;
   margin-top: 72px;
   min-height: 600px;position: relative;
+  padding-bottom: 72px;
 }
 
 .slider_content {
   border-radius: 4px;
   margin: auto;
   max-width: 560px;
+  overflow: hidden;
   width: 100%;
   box-shadow: -1px 4px 4px 0 rgba(0,0,0,0.2);
 
@@ -23,7 +25,7 @@
 
     h3 {
       line-height: $line-height-main;
-      margin-bottom: 24px;
+      margin: 0 0 24px;
     }
   }
 
@@ -33,7 +35,7 @@
     text-align: left;
 
     p {
-      padding: 24px 0;
+      padding: 24px 0 16px;
       line-height: 1.7;
       margin: 0;
     }
