Fix bottom menu layout

--- a/src/scss/platform_slider.scss
+++ b/src/scss/platform_slider.scss
@@ -45,3 +45,13 @@
     }
   }
 }
+
+@media screen and (max-width: 767px){
+  .platform_slide {
+    padding: 24px;
+
+    .button--primary {
+      max-width: 100%;
+    }
+  }
+}
