--- a/src/scss/platform_bottom_menu.scss
+++ b/src/scss/platform_bottom_menu.scss
@@ -1,5 +1,40 @@
 @import "variables";
 
+.platform_header {
+  position: relative;
+}
+
 .bottom_menu {
+  background-color: rgba(0,0,0,0.45);
+  box-shadow: 0 1px 0 0 #E6E6E6;
+  bottom: 0;
+  height: 72px;
+  position: absolute;
+  width: 100%;
+}
+
+.bottom_navigation{
+  margin: 0;
+  min-height: 72px;
+
+  &-item {
+    display: inline-block;
+
+    a {
+      border-right: solid 1px #E6E6E6;
+      color: #ffffff;
+      display: inline-block;
+      font-size: 16px;
+      padding: 24px 24px 22px;
+
+      &:hover {
+        color: #ffffff;
+      }
+    }
+
+    &:first-child a {
+      border-left: solid 1px #E6E6E6;
+    }
+  }
 
 }
