sportsmens and subscribe mobile

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -4,3 +4,6 @@ $color--gray--darker:   #8c8c8c;
 $color--blue:           #0178be;
 $color--orange:         #f26522;
 $color--green:          #66952e;
+$button-primary-color: #fff;
+$button-primary-bg: #007ABF;
+$button-primary-border: #164170;
