--- a/src/scss/button.scss
+++ b/src/scss/button.scss
@@ -1,4 +1,3 @@
-@import "bootstrap-custom";
 @import "variables";
 
 .button- {
@@ -13,8 +12,8 @@
 
   &-primary {
     @extend .button-;
-    background: $btn-primary-bg;
-    color: $btn-primary-color;
+    background: $button-primary-bg;
+    color: $button-primary-color;
     border: none;
     width: 248px;
 
