--- a/src/scss/sportsmens.scss
+++ b/src/scss/sportsmens.scss
@@ -1,4 +1,3 @@
-@import "bootstrap-custom";
 @import "variables";
 
 .sportsmens_section {
@@ -96,4 +95,70 @@
     height: 100%;
   }
 
+}
+
+@media screen and (max-width: 678px) {
+  .sportsmens_section {
+    height: auto;
+    padding-top: 0;
+
+    .position {
+      position: relative;
+    }
+
+    .sportsmens-slide {
+      margin-top: 15.5px;
+    }
+
+    .team_olympians {
+      h1 {
+        font-size: 26px;
+        margin-left: 16px;
+      }
+
+    }
+    .spotsmens_info {
+      box-shadow: 0 0 0 0 !important;
+      border-radius: 0;
+      display: inline;
+      height: 100%;
+    }
+
+    .brandan_photo {
+      width: 164.44px;
+      height: 164.44px;
+      overflow: hidden;
+      border-radius: 82.22px;
+      margin-left: 16px;
+    }
+
+    .brandan_size {
+      max-height: 100%;
+    }
+
+    .photo_size {
+      width: 164px;
+      max-width: 100%;
+      height: auto;
+    }
+    .sportsmens_bio {
+      background: none;
+      height: auto;
+      vertical-align: middle;
+      width: 100%;
+    }
+    .star_title {
+      margin-right: 16px;
+      margin-top: 27.56px;
+      margin-left: 16px;
+      h6 {
+        font-size: 14px;
+      }
+    }
+    .sportsmens_biography {
+      margin-top: 17px;
+      margin-left: 16px;
+      margin-right: 16px;
+    }
+  }
 }
