--- a/src/scss/starteam.scss
+++ b/src/scss/starteam.scss
@@ -10,6 +10,11 @@
     margin-top: 7%;
   }
 
+  .sportsmen_subheader {
+    color: rgba(0,0,0,0.45);
+    line-height: 27px;
+  }
+
   .spotsmens_info {
     display: flex;
     overflow: hidden;
