--- a/src/scss/sportsmens.scss
+++ b/src/scss/sportsmens.scss
@@ -14,6 +14,8 @@
   }
   .sportsmens-slide {
     margin-top: 0;
+    box-shadow: 0 0 0 0;
+    border: 1px solid #E6E6E6;
   }
 
 
@@ -53,7 +55,7 @@
   }
 
   .sportsmen_subheader {
-    color: rgba(0,0,0,45);
+    color: rgba(0,0,0,0.45);
     line-height: 27px;
   }
 
