--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,6 +14,7 @@
 .fontbold {
   font-family: glober-bold;
   font-weight: bold;
+  color: #262626;
 }
 
 .host-event-color {
@@ -71,8 +72,39 @@
   margin-top: -64px;
 }
 
+.sportsmens-slide {
+  margin-top: 0;
+  box-shadow: 0 0 0 0!important;
+  border: 1px solid #E6E6E6!important;
+}
+
 .modal-width {
   width: 100%;
+}
+
+.sportsmen_modal-header {
+  background-color: #F5F5F5;
+  height: 72px;
+  color: #0C65B1;
+  line-height: 36px;
+  font-size: 25px;
+  padding-top: 21px;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  padding-left: 24px;
+}
+
+.sportsmens_modal-biography {
+  color: #333333;
+  margin-top: 18px;
+  margin-right: 24px;
+  margin-left: 24px;
+  margin-bottom: 18px;
+}
+
+.sportsmens_title {
+  margin-left: 24px;
+  margin-top: 24px;
 }
 
 .close-popup {
@@ -107,6 +139,8 @@
   border-radius: 24px;
   left: auto;
   margin-top: 8px;
+  filter: none;
+  opacity: 1;
 }
 
 .slide-control:hover {
