--- a/src/scss/platform_bottom_menu.scss
+++ b/src/scss/platform_bottom_menu.scss
@@ -13,6 +13,11 @@
   width: 100%;
 }
 
+ul.bottom_navigation {
+  margin: 0;
+  padding: 0;
+}
+
 .bottom_navigation{
   margin: 0;
   min-height: 72px;
